# minifloat-rs

./: Cargo.toml  README.md
src/: detail.rs  example.rs  lib.rs  most16.rs  most8.rs  test.rs
tests/: all.rs  smoke.rs  test_most8.rs
