[package]
name = "minifloat"
version = "0.1.5"
authors = ["Chen-Pang He (https://jdh8.org)"]
edition = "2021"
description = "Emulate various minifloats with const generics"
repository = "https://github.com/jdh8/minifloat-rs"
license = "MPL-2.0"
categories = ["mathematics", "data-structures"]
keywords = ["minifloat", "f16", "bfloat16", "const-generics"]

[dev-dependencies]
libm = "0.2.8"

[dependencies]
num-traits = "0.2.19"
